--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -7,37 +7,49 @@
                         <h4 class="card-title ">Products</h4>
                         <p class="card-category">List of products currently on stock.</p>
                     </div>
+                    <div class="card my-0 px-3">
+                        <button [routerLink]="" class="btn btn-primary my-3">
+                            Create new product
+                        </button>
+                    </div>
+                    <div class="card-body col-6 d-flex">
+                        <input name="phrase" (keyup)="onChangePhrase($event)" class="form-control" type="text"
+                            placeholder="Enter filtering phrase...">
+                        <select class="custom-select ml-2" (change)="onChangeKey($event)">
+                            <option *ngFor="let attribute of attributes | keyvalue" [value]="attribute.key" [selected]="setDefault(attribute.key)">Filter by {{attribute.value}}</option>
+                        </select>
+                    </div>
                     <div class="card-body">
                         <div class="table-responsive">
                             <table class="table">
                                 <thead class="text-primary">
                                     <th>
-                                        ID
+                                        {{attributes.id}}
                                     </th>
                                     <th>
-                                        Name
+                                        {{attributes.name}}
                                     </th>
                                     <th>
-                                        Type
+                                        {{attributes.type}}
                                     </th>
                                     <th>
-                                        Category ID
+                                        {{attributes.catID}}
                                     </th>
                                     <th>
-                                        Description
+                                        {{attributes.description}}
                                     </th>
                                     <th>
-                                        Price
+                                        {{attributes.price}}
                                     </th>
                                     <th>
-                                        Featured
+                                        {{attributes.featured}}
                                     </th>
                                     <th>
-                                        Active
+                                        {{attributes.active}}
                                     </th>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let product of productList$ | async">
+                                    <tr *ngFor="let product of productList$ | async | filter:phrase:filterKey">
                                         <td>{{product.id}}</td>
                                         <td>{{product.name}}</td>
                                         <td>{{product.type}}</td>
@@ -47,16 +59,16 @@
                                         <td>{{product.featured}}</td>
                                         <td>{{product.active}}</td>
                                         <td>
-                                          <div class="btn-group">
-                                            <button [routerLink]="" class="btn btn-info px-3 mx-1">
-                                              <i class="fa fa-pencil"></i>
-                                            </button>
-                                            <button class="btn btn-danger px-3 mx-1" (click)="onDelete(product)">
-                                              <i class="fa fa-trash"></i>
-                                            </button>
-                                          </div>
+                                            <div class="btn-group">
+                                                <button [routerLink]="" class="btn btn-info">
+                                                    <i class="fa fa-pencil"></i>
+                                                </button>
+                                                <button class="btn btn-danger" (click)="onDelete(product)">
+                                                    <i class="fa fa-trash"></i>
+                                                </button>
+                                            </div>
                                         </td>
-                                      </tr>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
