--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -16,48 +16,22 @@
                         <input name="phrase" (keyup)="onChangePhrase($event)" class="form-control" type="text"
                             placeholder="Enter filtering phrase...">
                         <select class="custom-select ml-2" (change)="onChangeKey($event)">
-                            <option *ngFor="let attribute of attributes | keyvalue" [value]="attribute.key" [selected]="setDefault(attribute.key)">Filter by {{attribute.value}}</option>
+                            <option *ngFor="let attribute of attributes | keyvalue:originalOrder"
+                                [value]="attribute.key" [selected]="setDefault(attribute.key)">Filter by
+                                {{attribute.value}}</option>
                         </select>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
                             <table class="table">
                                 <thead class="text-primary">
-                                    <th>
-                                        {{attributes.id}}
-                                    </th>
-                                    <th>
-                                        {{attributes.name}}
-                                    </th>
-                                    <th>
-                                        {{attributes.type}}
-                                    </th>
-                                    <th>
-                                        {{attributes.catID}}
-                                    </th>
-                                    <th>
-                                        {{attributes.description}}
-                                    </th>
-                                    <th>
-                                        {{attributes.price}}
-                                    </th>
-                                    <th>
-                                        {{attributes.featured}}
-                                    </th>
-                                    <th>
-                                        {{attributes.active}}
-                                    </th>
+                                    <th *ngFor="let attribute of attributes | keyvalue:originalOrder">
+                                        {{attribute.value}}</th>
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let product of productList$ | async | filter:phrase:filterKey">
-                                        <td>{{product.id}}</td>
-                                        <td>{{product.name}}</td>
-                                        <td>{{product.type}}</td>
-                                        <td>{{product.catID}}</td>
-                                        <td>{{product.description}}</td>
-                                        <td>{{product.price}}</td>
-                                        <td>{{product.featured}}</td>
-                                        <td>{{product.active}}</td>
+                                        <td *ngFor="let attribute of attributes | keyvalue:originalOrder">
+                                            {{product[attribute.key]}}</td>
                                         <td>
                                             <div class="btn-group">
                                                 <button [routerLink]="" class="btn btn-info">
