--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -33,7 +33,10 @@
           <td>
             <div class="btn-group">
               <button [routerLink]="[order.id]" class="btn btn-info">
-                <i class="fa fa-edit"></i>
+                <i class="material-icons">manage_search</i>
+              </button>
+              <button [routerLink]="[order.id]" class="btn btn-danger">
+                <i class="material-icons">delete_outline</i>
               </button>
             </div>
           </td>
