--- a/src/app/page/edit/edit-product/edit-product.component.html
+++ b/src/app/page/edit/edit-product/edit-product.component.html
@@ -4,35 +4,35 @@
       <div class="form-group">
         <label for="">Név</label>
         <input name="name" [(ngModel)]="product.name" type="text" class="form-control" required>
-        <div [hidden]="productForm.controls.name?.valid" class="error-message">
+        <div [hidden]="productForm.controls.name?.valid || productForm.controls.name?.pristine" class="error-message">
           Hiányzó név!
         </div>
       </div>
       <div class="form-group">
         <label for="">Típus</label>
         <input name="type" [(ngModel)]="product.type" type="text" class="form-control" required>
-        <div [hidden]="productForm.controls.type?.valid" class="error-message">
+        <div [hidden]="productForm.controls.type?.valid || productForm.controls.type?.pristine" class="error-message">
           Hiányzó típus!
         </div>
       </div>
       <div class="form-group">
         <label for="">Kategória ID</label>
         <input name="catId" [(ngModel)]="product.catId" type="number" class="form-control" required>
-        <div [hidden]="productForm.controls.catId?.valid" class="error-message">
+        <div [hidden]="productForm.controls.catId?.valid || productForm.controls.catId?.pristine" class="error-message">
           Hiányzó kategória ID!
         </div>
       </div>
       <div class="form-group">
         <label for="">Leírás</label>
         <input name="description" [(ngModel)]="product.description" type="text" class="form-control" required>
-        <div [hidden]="productForm.controls.description?.valid" class="error-message">
+        <div [hidden]="productForm.controls.description?.valid || productForm.controls.description?.pristine" class="error-message">
           Hiányzó leírás!
         </div>
       </div>
       <div class="form-group">
         <label for="">Ár</label>
         <input name="price" [(ngModel)]="product.price" type="number" class="form-control" required>
-        <div [hidden]="productForm.controls.price?.valid" class="error-message">
+        <div [hidden]="productForm.controls.price?.valid || productForm.controls.price?.pristine" class="error-message">
           Hiányzó ár!
         </div>
       </div>
