--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -1,5 +1,8 @@
 
-<div>
+
+<div class="row">
+<div ></div>
+<div class="col-6 offset-3">
   <h3>Orders</h3>
   <table class="table">
     <thead>
@@ -37,4 +40,5 @@
   </table>
 
 </div>
-<p>listing-order works!</p>
+</div>
+
