--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -25,11 +25,14 @@
                         <div class="table-responsive">
                             <table class="table">
                                 <thead class="text-primary">
-                                    <th *ngFor="let attribute of attributes | keyvalue:originalOrder">
-                                        {{attribute.value}}</th>
+                                    <th *ngFor="let attribute of attributes | keyvalue:originalOrder" (click)="onColumnSelect(attribute.key)">
+                                        {{attribute.value}}
+                                        <span *ngIf="(sortOrder[attribute.key] === 'ascending' )"><i class="fa fa-angle-up"></i></span>
+                                        <span *ngIf="(sortOrder[attribute.key] === 'descending' )"><i class="fa fa-angle-down"></i></span>
+                                    </th>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let product of productList$ | async | filter:phrase:filterKey">
+                                    <tr *ngFor="let product of productList$ | async | filter:phrase:filterKey | sorter:sorterKey:sortDirection">
                                         <td *ngFor="let attribute of attributes | keyvalue:originalOrder">
                                             {{product[attribute.key]}}</td>
                                         <td>
