--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<h3>Start page</h3>
-<div>
-  <app-nav></app-nav>
-</div>
-<div class="app-content">
-  <router-outlet></router-outlet>
+<div class="container">
+  <div class="row">
+    <div class="col-12 mt-5">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
