Bills: card-header szöveg javítás

--- a/src/app/pages/bill-list/bill-list.component.html
+++ b/src/app/pages/bill-list/bill-list.component.html
@@ -5,7 +5,7 @@
                 <div class="card">
                     <div class="card-header card-header-info">
                         <h4 class="card-title ">Bills</h4>
-                        <p class="card-category">List of bills currently on stock.</p>
+                        <p class="card-category">List of bills for orders.</p>
                     </div>
                     <div class="card my-0 px-3">
                         <button [routerLink]="" class="btn btn-primary my-3">
