--- a/src/app/page/card/card.component.html
+++ b/src/app/page/card/card.component.html
@@ -1,1 +1,17 @@
-<p>card works!</p>
+<div class="card card-stats">
+  <div class="card-header card-header-icon" class="{{ cardClass }}">
+    <div class="card-icon">
+      <i class="material-icons">{{ icon }}</i>
+    </div>
+    <p class="card-category">{{ content }}</p>
+    <h3 class="card-title">
+      {{ title }}
+    </h3>
+  </div>
+  <div class="card-footer">
+    <div class="stats">
+      <i class="material-icons">{{ footIcon }}</i>
+      <a href="javascript:;">{{ footer }}</a>
+    </div>
+  </div>
+</div>
