--- a/src/app/pages/bill-list/bill-list.component.html
+++ b/src/app/pages/bill-list/bill-list.component.html
@@ -25,19 +25,22 @@
                         <div class="table-responsive">
                             <table class="table">
                                 <thead class="text-primary">
-                                    <th *ngFor="let attribute of attributes | keyvalue:originalOrder">
-                                        {{attribute.value}}</th>
+                                    <th *ngFor="let attribute of attributes | keyvalue:originalOrder" (click)="onColumnSelect(attribute.key)">
+                                        {{attribute.value}}
+                                        <span *ngIf="(sortOrder[attribute.key] === 'ascending' )"><i class="fa fa-angle-up"></i></span>
+                                        <span *ngIf="(sortOrder[attribute.key] === 'descending' )"><i class="fa fa-angle-down"></i></span>
+                                    </th>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let bill of billList$ | async | filter:phrase:filterKey">
+                                    <tr *ngFor="let bill of billList$ | async | filter:phrase:filterKey | sorter:sorterKey:sortDirection">
                                         <td *ngFor="let attribute of attributes | keyvalue:originalOrder">
-                                            {{bill[attribute.key]}}</td>
+                                            {{ bill[attribute.key] }}</td>
                                         <td>
                                             <div class="btn-group">
                                                 <button [routerLink]="" class="btn btn-info">
                                                     <i class="fa fa-pencil"></i>
                                                 </button>
-                                                <button class="btn btn-danger" (click)="onDelete(product)">
+                                                <button class="btn btn-danger" (click)="onDelete(bill)">
                                                     <i class="fa fa-trash"></i>
                                                 </button>
                                             </div>
