--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -25,11 +25,14 @@
                         <div class="table-responsive">
                             <table class="table">
                                 <thead class="text-primary">
-                                    <th *ngFor="let attribute of attributes | keyvalue:originalOrder">
-                                        {{attribute.value}}</th>
+                                    <th *ngFor="let attribute of attributes | keyvalue:originalOrder" (click)="onColumnSelect(attribute.key)">
+                                        {{attribute.value}}
+                                        <span *ngIf="(sortOrder[attribute.key] === 'ascending' )"><i class="fa fa-angle-up"></i></span>
+                                        <span *ngIf="(sortOrder[attribute.key] === 'descending' )"><i class="fa fa-angle-down"></i></span>
+                                    </th>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let order of orderList$ | async | filter:phrase:filterKey">
+                                    <tr *ngFor="let order of orderList$ | async | filter:phrase:filterKey | sorter:sorterKey:sortDirection">
                                         <td *ngFor="let attribute of attributes | keyvalue:originalOrder">
                                             {{order[attribute.key]}}</td>
                                         <td>
@@ -37,7 +40,7 @@
                                                 <button [routerLink]="" class="btn btn-info">
                                                     <i class="fa fa-pencil"></i>
                                                 </button>
-                                                <button class="btn btn-danger" (click)="onDelete(product)">
+                                                <button class="btn btn-danger" (click)="onDelete(order)">
                                                     <i class="fa fa-trash"></i>
                                                 </button>
                                             </div>
