--- a/src/app/pages/customer-list/customer-list.component.html
+++ b/src/app/pages/customer-list/customer-list.component.html
@@ -25,11 +25,14 @@
                         <div class="table-responsive">
                             <table class="table">
                                 <thead class="text-primary">
-                                    <th *ngFor="let attribute of attributes | keyvalue:originalOrder">
-                                        {{attribute.value.title}}</th>
+                                    <th *ngFor="let attribute of attributes | keyvalue:originalOrder" (click)="onColumnSelect(attribute.key)">
+                                        {{attribute.value.title}}
+                                        <span *ngIf="attribute.value.order === 'ascending'"  class="material-icons"><i class="fa fa-angle-up"></i></span>
+                                        <span *ngIf="attribute.value.order === 'descending'" class="material-icons"><i class="fa fa-angle-down"></i></span>
+                                    </th>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let customer of customerList$ | async | filter:phrase:filterKey:filterSubKey">
+                                    <tr *ngFor="let customer of customerList$ | async | filter:phrase:filterKey:filterSubKey | sorter:sorterKey:sortDirection:sorterSubKey">
                                         <td *ngFor="let attribute of attributes | keyvalue:originalOrder">
                                             <span *ngIf="attribute.value.type==='text' && !attribute.value.obj">{{customer[attribute.key]}}</span>
                                             <span *ngIf="attribute.value.type==='text' && attribute.value.obj">{{customer[attribute.value.obj][attribute.key]}}</span>
