--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -4,42 +4,48 @@
 
     Tip 2: you can also add an image using data-image tag
 -->
-  <div class="logo"><a href="http://www.creative-tim.com" class="simple-text logo-normal">
+  <div class="logo"><a routerLink="/" class="simple-text logo-normal">
       AUTÓS WEBSHOP
     </a></div>
   <div class="sidebar-wrapper">
     <ul class="nav">
-      <li class="nav-item active  ">
+      <li class="nav-item  " routerLinkActive="active " [routerLinkActiveOptions]="{exact:
+        true}">
         <a class="nav-link" routerLink="/">
           <i class="material-icons">dashboard</i>
           <p>Dashboard</p>
         </a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item " routerLinkActive="active " [routerLinkActiveOptions]="{exact:
+        true}">
         <a class="nav-link" routerLink="/categories">
           <i class="material-icons">category</i>
           <p>Categories</p>
         </a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item " routerLinkActive="active " [routerLinkActiveOptions]="{exact:
+        true}">
         <a class="nav-link" routerLink="/products">
           <i class="material-icons">directions_car_filled</i>
           <p>Products</p>
         </a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item " routerLinkActive="active " [routerLinkActiveOptions]="{exact:
+        true}">
         <a class="nav-link" routerLink="/customers">
           <i class="material-icons">person</i>
           <p>Customers</p>
         </a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item " routerLinkActive="active " [routerLinkActiveOptions]="{exact:
+        true}">
         <a class="nav-link" routerLink="/orders">
           <i class="material-icons">shopping_cart</i>
           <p>Orders</p>
         </a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item " routerLinkActive="active " [routerLinkActiveOptions]="{exact:
+        true}">
         <a class="nav-link" routerLink="/bills">
           <i class="material-icons">receipt</i>
           <p>Bills</p>
