--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -1,6 +1,4 @@
-<h1>Dashboard oldal</h1>
-<app-nav></app-nav>
-
+<!-- <h1>Dashboard oldal</h1> -->
 <div class="row">
   <div *ngFor="let card of cards" class="col-lg-3 col-md-6 col-sm-6">
     <app-card
