dashboard separated apart to components

--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -13,7 +13,8 @@
 </div>
 <div class="row">
   <div class="col-md-4">
-    <div class="card card-chart">
+    <app-chart></app-chart>
+    <!-- <div class="card card-chart">
       <div class="card-header card-header-success">
         <div class="ct-chart" id="dailySalesChart"></div>
       </div>
@@ -31,7 +32,7 @@
           <i class="material-icons">access_time</i> updated 4 minutes ago
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   <div class="col-md-4">
     <div class="card card-chart">
