--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,8 @@
     </footer>
   </div>
 </div>
-<div class="fixed-plugin">
+
+<!-- <div class="fixed-plugin">
   <div class="dropdown show-dropdown">
     <a href="#" data-toggle="dropdown">
       <i class="fa fa-cog fa-2x"> </i>
@@ -100,12 +101,7 @@
           >Free Download</a
         >
       </li>
-      <!-- <li class="header-title">Want more components?</li>
-            <li class="button-container">
-                <a href="https://www.creative-tim.com/product/material-dashboard-pro" target="_blank" class="btn btn-warning btn-block">
-                  Get the pro version
-                </a>
-            </li> -->
+
       <li class="button-container">
         <a
           href="https://demos.creative-tim.com/material-dashboard/docs/2.1/getting-started/introduction.html"
@@ -139,4 +135,4 @@
       </li>
     </ul>
   </div>
-</div>
+</div> -->
