Some minor changes

--- a/src/app/widget/sidebar/sidebar.component.html
+++ b/src/app/widget/sidebar/sidebar.component.html
@@ -9,25 +9,25 @@
         </a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" routerLink="product">
+        <a class="nav-link" routerLink="products">
           <i class="material-icons">cases</i>
           <p>Termékek</p>
         </a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" routerLink="order">
+        <a class="nav-link" routerLink="orders">
           <i class="material-icons">shopping_cart</i>
           <p>Rendelések</p>
         </a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" routerLink="customer">
+        <a class="nav-link" routerLink="customers">
           <i class="material-icons">people_alt</i>
           <p>Vásárlók</p>
         </a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" routerLink="bill">
+        <a class="nav-link" routerLink="bills">
           <i class="material-icons">sell</i>
           <p>Számlák</p>
         </a>
