--- a/src/app/page/edit/edit-customer/edit-customer.component.html
+++ b/src/app/page/edit/edit-customer/edit-customer.component.html
@@ -60,7 +60,7 @@
         <div class="btn-group">
         </div>
         <button type="submit" class="btn btn-primary btn-block btn-lg">
-          <i  class="fa fa-save"></i>
+          <i  class="material-icons">save</i>
         </button>
       </form>
     </div>
