--- a/src/app/widget/chart/chart.component.html
+++ b/src/app/widget/chart/chart.component.html
@@ -1,17 +1,16 @@
+<!-- <div class="col-md-4"> -->
 <div class="card card-chart">
-  <div class="card-header card-header-success">
-    <div class="ct-chart" id="dailySalesChart"></div>
+  <div class="card-header" class="{{ chartClass }}">
+    <div class="ct-chart" id="{{ id }}"></div>
   </div>
   <div class="card-body">
-    <h4 class="card-title">Daily Sales</h4>
-    <p class="card-category">
-      <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span>
-      increase in today sales.
-    </p>
+    <h4 class="card-title">{{ title }}</h4>
+    <p class="card-category">{{ category }}</p>
   </div>
   <div class="card-footer">
     <div class="stats">
-      <i class="material-icons">access_time</i> updated 4 minutes ago
+      <i class="material-icons">access_time</i> campaign sent 2 days ago
     </div>
   </div>
 </div>
+<!-- </div> -->
