--- a/src/app/widget/chart/chart.component.html
+++ b/src/app/widget/chart/chart.component.html
@@ -1,4 +1,3 @@
-<!-- <div class="col-md-4"> -->
 <div class="card card-chart">
   <div class="card-header" class="{{ chartClass }}">
     <div class="ct-chart" id="{{ id }}"></div>
@@ -9,8 +8,7 @@
   </div>
   <div class="card-footer">
     <div class="stats">
-      <i class="material-icons">access_time</i> campaign sent 2 days ago
+      <i class="material-icons">{{ footIcon }}</i> {{ footer }}
     </div>
   </div>
 </div>
-<!-- </div> -->
