--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 mt-5">
+      <app-sidebar></app-sidebar>
       <router-outlet></router-outlet>
     </div>
   </div>
