--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<div class="container">
-  <div class="row">
-    <div class="col-12 mt-5">
-      <app-sidebar></app-sidebar>
-      <router-outlet></router-outlet>
+<div class="wrapper">
+  <app-sidebar></app-sidebar>
+  <div class="main-panel">
+    <div class="content">
+      <div class="container-fluid">
+        <router-outlet></router-outlet>
+      </div>
     </div>
-  </div>
 </div>
