--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
-            <div *ngFor="let card of cards" class="col-lg-3 col-md-6 col-sm-6">
+            <div *ngFor="let card of cards" class="col-sm-6">
                 <app-info-card [cardClass]="card.cardClass" [icon]="card.icon"
                     [title]="card.title" [content]="card.content"
                     [footer]="card.footer">kártya
