Listing bill: temporary code

--- a/src/app/page/listing/listing-bill/listing-bill.component.html
+++ b/src/app/page/listing/listing-bill/listing-bill.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<p>számlák</p>
+<!-- <div class="container">
     <div class="row">
         <div class="col-8 offset-2">
             <h3>Bills</h3>
@@ -16,7 +17,7 @@
                     {{ key }}
                 </option>
             </select>
-        </div>
+        </div> -->
 
         <!-- <div class="col-4">
             <form class="form-inline my-2 my-lg-0">
@@ -25,7 +26,7 @@
             </form>
         </div> -->
 
-        <table class="table table-striped">
+        <!-- <table class="table table-striped">
             <thead>
                 <tr *ngFor="let col of cols">{{ col.text }}>
                     <th (click)="onColumnSelect('id')">ID</th>
@@ -55,4 +56,4 @@
             </tbody>
         </table>
     </div>
-</div>
+</div> -->
