Toaster elhelyezve a formon

--- a/src/app/page/edit/edit-customer/edit-customer.component.html
+++ b/src/app/page/edit/edit-customer/edit-customer.component.html
@@ -59,7 +59,7 @@
         </div>
         <div class="btn-group">
         </div>
-        <button type="submit" class="btn btn-primary btn-block btn-lg">
+        <button [disabled]="customerForm.invalid || updating" type="submit" class="btn btn-primary btn-block btn-lg">
           <i  class="material-icons">save</i>
         </button>
       </form>
